--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,18 +1,16 @@
-<ion-header>
-  <ion-navbar>
-    <button ion-button menuToggle>
-      <ion-icon name="menu"></ion-icon>
-    </button>
-    <ion-title>Home</ion-title>
-  </ion-navbar>
-</ion-header>
-
 <ion-content padding>
-  <h3>Ionic Menu Starter</h3>
-
-  <p>
-    If you get lost, the <a href="http://ionicframework.com/docs/v2">docs</a> will show you the way.
-  </p>
-
-  <button ion-button secondary menuToggle>Toggle Menu</button>
+  <h3>Aluguel de carros</h3>
+  <img src="assets/imgs/car-icon.png">
+  <form>
+    <ion-item>
+      <ion-label stacked>Email</ion-label>
+      <ion-input type="text"></ion-input>
+    </ion-item>
+    <ion-item>
+      <ion-label stacked>Senha</ion-label>
+      <ion-input type="password"></ion-input>
+    </ion-item>
+    <button ion-button block>Entrar</button>
+  </form>
+  <button ion-button block outline>Registrar</button>
 </ion-content>
