Criando um interpector para tratamento de erro

--- a/src/pages/categorias/categorias.html
+++ b/src/pages/categorias/categorias.html
@@ -14,7 +14,7 @@
         <img src="{{bucketUrl}}/cat{{item.id}}.png">
       </ion-avatar>
       <h2>{{item.nome}}</h2>
-      <p>{{item.valorDiario}}</p>
+      <p>Diária: R${{item.valorDiario}}</p>
     </button>
   </ion-list>
 </ion-content>
