--- a/src/pages/signup/signup.html
+++ b/src/pages/signup/signup.html
@@ -4,11 +4,6 @@
   See http://ionicframework.com/docs/components/#navigation for more info on
   Ionic pages and navigation.
 -->
-<ion-header>
-  <ion-navbar>
-    <ion-title>Signup</ion-title>
-  </ion-navbar>
-</ion-header>
  <ion-content padding>
   <form [formGroup]="formGroup" (ngSubmit)="signupUser(); $event.preventDefault()">
     <ion-item>
@@ -46,4 +41,5 @@
     </ion-item>
     <button ion-button block type="submit" [disabled]="formGroup.invalid">Criar conta</button>
   </form>
+  <button ion-button block outline (click)="back()">Voltar</button>
 </ion-content>
