--- a/src/pages/carros/carros.html
+++ b/src/pages/carros/carros.html
@@ -24,6 +24,6 @@
         {{item.ano}}
       </p>
     </ion-card-content>
-    <button ion-button class="right-button" clear (click)="Detalhes()">Detalhes</button>
+    <button ion-button class="right-button" clear (click)="showDetails(item.id)">Detalhes</button>
   </ion-card>
 </ion-content>
