Comecando o form de locacao

--- a/src/pages/carro-detail/carro-detail.html
+++ b/src/pages/carro-detail/carro-detail.html
@@ -34,5 +34,5 @@
         <p>{{item?.sede.endereco.logradouro}}, {{item?.sede.endereco.numero}} {{item?.sede.endereco.complemento}}</p>
       </ion-card-content>
     </ion-card>
-      <button ion-button block outline (click)="locacao()">Alugar</button>
+      <button ion-button block outline (click)="locacao(item)">Alugar</button>
 </ion-content>
