--- a/src/pages/locacao/locacao.html
+++ b/src/pages/locacao/locacao.html
@@ -31,6 +31,7 @@
 
     <ion-item *ngIf="formGroup.value['@type'] == 'LocacaoDiaria'">
       <ion-label stacked>Dias Previstos</ion-label>
+      <ion-input formControlName="diasPrevistos" type="text"></ion-input>
     </ion-item>
 
     <ion-item>
