--- a/src/pages/carros/carros.html
+++ b/src/pages/carros/carros.html
@@ -14,6 +14,9 @@
 
 
 <ion-content padding>
+  <ion-refresher (ionRefresh)="doRefresh($event)">
+    <ion-refresher-content></ion-refresher-content>
+  </ion-refresher>
   <ion-card *ngFor="let item of items">
     <img [src]="item.imageUrl || 'assets/imgs/monza.jpg'"/>
     <ion-card-content>
