--- a/src/pages/carros/carros.html
+++ b/src/pages/carros/carros.html
@@ -7,6 +7,9 @@
 <ion-header>
 
   <ion-navbar color="red">
+      <button ion-button menuToggle>
+          <ion-icon name="menu"></ion-icon>
+      </button>
     <ion-title>carros</ion-title>
   </ion-navbar>
 
